...
                            }
                            .padding(.leading ,16)
                            .padding(.vertical, 12)
                        }
                        Divider()
                    }
                    .navigationTitle("Contact")
                    .navigationBarTitleDisplayMode(.inline)
                    .navigationBarItems(leading: Button(action: {
                        showAlert.toggle()
                    }, label: {
                            Text("Groups")
                                .foregroundStyle(Color("Icon"))
                                
                        }), trailing: Button(action: {
                            addContact.toggle()
                        }, label: {
                            Image(systemName: "plus")
                                .foregroundStyle(Color("Icon"))
                        })
                            .fullScreenCover(isPresented: $addContact, content: {
                                AddContactView(viewModel: viewModel)
                            })
                                .fullScreenCover(isPresented: $showAlert, content: {
...
