...
                    Text("Cancle")
                        .foregroundStyle(Color("Icon"))
                }), trailing: Button(action: {
                    addContactAlert.toggle()
                    viewModel.updateContact(contact: contact)
                }, label: {
                    Text("Done")
                        .foregroundStyle(Color("Icon"))
                }
                )
                .alert(isPresented: $addContactAlert, content: {
                    Alert(title: Text("Edit Successfully"),
                          message: Text(""),
...
